<?xml version="1.0"?>
<package>
  <name>hampus_client</name>
  <version>0.0.0</version>
  <description>The hampus_client package</description>

  <maintainer email="hampusdunstrom@gmail.com">Hampus Dunström</maintainer>

  <license>GNU LESSER GENERAL PUBLIC LICENSE</license>

  <author email="hampusdunstrom@gmail.com">Hampus Dunström</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>

</package>